--- a/Web-developing_company/index.html
+++ b/Web-developing_company/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web-developing company</title>
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:400, 600"
       rel="stylesheet"
