--- a/Tea_Cozy/index.html
+++ b/Tea_Cozy/index.html
@@ -27,5 +27,71 @@
         </h4>
       </div>
     </div>
+    <!-- Main -->
+    <main>
+      <article>
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <section>
+          <div class="product">
+            <img
+              src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg"
+              alt="Fall Berry Blitz Tea image"
+            />
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="product">
+            <img
+              src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg"
+              alt="Spiced Rum Tea image"
+            />
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="product">
+            <img
+              src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg"
+              alt="Myrtle Ave Tea image"
+            />
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <div class="product">
+            <img
+              src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg"
+              alt="Seasonal Donuts image"
+            />
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="product">
+            <img
+              src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"
+              alt="Bedford Bizarre Tea image"
+            />
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+        </section>
+      </article>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <h2>Locations</h2>
+      <div class="locations">
+        <div class="location">
+          <h3>Downtown</h3>
+          <p>384 West 4th St Suite 108 Portland, Maine</p>
+        </div>
+        <div class="location">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue (Northwest Corner) Portland Maine</p>
+        </div>
+        <div class="location">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue Second Floor Portland, Maine</p>
+        </div>
+      </div>
+    </footer>
+    <div class="contacts">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+    </div>
   </body>
 </html>
